[REFACTOR] Remove unused code